--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -43,14 +43,20 @@
 
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="contacts-link">
+              <svg class="contacts-icon">
+                <use href="../imges/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              <span> info@devstudio.com </span>
+            </a>
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="contacts-link">
+              <svg class="contacts-icon">
+                <use href="../imges/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              <span> +38 096 111 11 11 </span>
+            </a>
           </li>
         </ul>
       </div>
@@ -143,29 +149,71 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="logo-decor">Studio</span></a
-        >
-        <address class="footer-address">
-          <a
-            class="address-link"
-            href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5358109,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?hl=ru&entry=ttu"
-            >м. Київ, пр-т Лесі Українки, 26</a
+      <div class="container footer-group">
+        <div>
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="logo-decor">Studio</span></a
           >
-          <ul class="address-list">
-            <li class="item">
-              <a class="contacts-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+          <address class="footer-address">
+            <a
+              class="address-link"
+              href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5358109,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?hl=ru&entry=ttu"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+
+            <ul class="address-list">
+              <li class="item">
+                <a class="contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="contacts-link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <h2 class="footer-title">ПРИЄДНУЙТЕСЬ</h2>
+          <ul class="socialmedia-list">
+            <li>
+              <a
+                href="https://www.instagram.com/"
+                class="socialmedia-footerlink"
               >
+                <svg class="socialmedia-footer">
+                  <use href="../imges/symbol-defs.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <a class="contacts-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+              <a href="https://x.com/" class="socialmedia-footerlink">
+                <svg class="socialmedia-footer">
+                  <use href="../imges/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.facebook.com/"
+                class="socialmedia-footerlink"
               >
+                <svg class="socialmedia-footer">
+                  <use href="../imges/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="https://ua.linkedin.com/" class="socialmedia-footerlink">
+                <svg class="socialmedia-footer">
+                  <use href="../imges/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
